--- a/.github/workflows/greeter.yml
+++ b/.github/workflows/greeter.yml
@@ -9,7 +9,8 @@ jobs:
 
     steps:
       - name: step 1, Greet
-        run: echo Hello team!
+        run: echo ${{ secrets.MY_SECRET_KEY }}
+
 
       - name: step 2
         run: echo bye bye!
