--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
   mongo:
     image: mongo
     ports:
-    - 8000:27017
+    - 27017:27017
+    volumes:
+    - /data/db
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -14,9 +16,10 @@ services:
   mongo-express:
     image: mongo-express
     ports:
-    - 8001:8081
+    - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
     depends_on:
       - mongo
+
