--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-java-app:latest
 
       - name: Upload jar file
         uses: actions/upload-artifact@v2
